First working use case of end to end in the system, roles can now be written to the database after being entered on the UI

--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -27,20 +27,16 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form>
+                <form th:action="@{/roles}" method="post" th:object="${role}">
                     <h2>Manage Roles</h2>
                     <div>
-                        <ul class="checkbox-list">
-                            <li><span class="primary">Developer</span></li>
-                            <li><span class="primary">Designer</span></li>
-                            <li><span class="primary">QA</span></li>
-                            <li><span class="primary">DevOps</span></li>
-                            <li><span class="primary">Copywriter</span></li>
+                        <ul th:each="role: ${roles}" class="checkbox-list" >
+                            <li th:text="${role.name}"><span class="primary"></span></li>
                         </ul>
                     </div>
                     <div class="actions add-new-role">
-                        <input type="text" placeholder="New Role..."/>
-                        <a class="button" href="#">Add</a>
+                        <input type="text" th:field="*{name}" placeholder="New Role..."/>
+                        <button type="submit" class="button">Add</button>
                     </div>
                 </form>
             </div>
