--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -401,8 +401,8 @@ form .add-new-collaborator .custom-select {
 }
 form .add-new-role .button,
 form .add-new-collaborator .button {
-	width: 30px;
-	text-align: center;
+	width: 60px;
+	text-align: left;
 	float: left;
 	margin: 0;
 }
