Adding link to each of the list elements for role that links to a role detail page, added a new role detail page which is still to be completed

--- a/src/main/resources/templates/role_detail.html
+++ b/src/main/resources/templates/role_detail.html
@@ -6,8 +6,8 @@
         <title>InstaTeam</title>
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/site.css"/>
+        <link rel="stylesheet" href="/css/normalize.css"/>
+        <link rel="stylesheet" href="/css/site.css"/>
     </head>
     <body>
         <header>
@@ -28,17 +28,14 @@
         <section>
             <div class="container wrapper">
                 <form th:action="@{/roles}" method="post" th:object="${role}">
-                    <h2>Manage Roles</h2>
-                    <div>
-                        <ul class="checkbox-list" >
-                            <li th:each="role: ${roles}">
-                                <a th:href="@{|/roles/${role.id}/edit|}" th:text="${role.name}"></a>
-                            </li>
-                        </ul>
-                    </div>
+                    <h2>Edit Role</h2>
                     <div class="actions add-new-role">
                         <input type="text" th:field="*{name}" placeholder="New Role..."/>
                         <button type="submit" class="button">Add</button>
+                    </div>
+                    <div class="actions add-new-role">
+                        <button type="reset" class=" button">Cancel</button>
+                        <button type="reset" class="button">Delete</button>
                     </div>
                 </form>
             </div>
