Added 3 new buttons CSS to display correctly on edit page

--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -407,6 +407,13 @@ form .add-new-collaborator .button {
 	margin: 0;
 }
 
+form .edit-role .button {
+    width: 80px;
+    text-align: left;
+    float: left;
+    margin: 0 10px 0 0;
+}
+
 
 
 
