--- a/src/main/resources/templates/role_detail.html
+++ b/src/main/resources/templates/role_detail.html
@@ -28,9 +28,11 @@
         <section>
             <div class="container wrapper">
                 <form th:action="@{|/roles/${role.id}|}" method="post" th:object="${role}">
+                    <input type="hidden" th:field="*{id}"/>
                     <h2>Edit Role</h2>
-                    <div class="actions add-new-role">
+                    <div class="actions add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
                         <input type="text" th:field="*{name}" placeholder="New Role..."/>
+                        <div class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                     </div>
                     <div class="actions edit-role">
                         <button type="submit" class="button">Update</button>
