--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -80,6 +80,14 @@ nav ul li.selected a {
 	font-weight: 700;
 }
 
+.error-message {
+    border: 2px solid #ac4343;
+    border-radius: 0 0 6px 6px;
+    background-color: #ac4343;
+    color: rgb(254,251,251);
+    padding: 10px;
+}
+
 
 
 /* ==========================================================================
@@ -413,6 +421,18 @@ form .edit-role .button {
     float: left;
     margin: 0 10px 0 0;
 }
+
+
+.error .error-message {
+    width: calc(100% - 100px);
+    border: 2px solid #ac4343;
+    border-radius: 0 0 6px 6px;
+    background-color: #ac4343;
+    color: rgb(254,251,251);
+    float: left;
+}
+
+
 
 
 
