Fixing CSS so that the cancel button is the same size as the others and it re-directs to roles, also the delete button now works and has the request mapping in role controller

--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -415,7 +415,7 @@ form .add-new-collaborator .button {
 	margin: 0;
 }
 
-form .edit-role .button {
+form .edit-role .a .button {
     width: 80px;
     text-align: left;
     float: left;
@@ -431,11 +431,6 @@ form .edit-role .button {
     color: rgb(254,251,251);
     float: left;
 }
-
-
-
-
-
 
 
 
