--- a/src/main/resources/templates/role_detail.html
+++ b/src/main/resources/templates/role_detail.html
@@ -30,17 +30,17 @@
                 <form th:action="@{|/roles/${role.id}|}" method="post" th:object="${role}">
                     <input type="hidden" th:field="*{id}"/>
                     <h2>Edit Role</h2>
-                    <div class="actions add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
+                    <div class="actions-role-detail add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
                         <input type="text" th:field="*{name}" placeholder="New Role..."/>
                         <div class = "error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                     </div>
-                    <div class="actions add-new-role">
+                    <div class="actions-role-detail">
                         <button type="submit" class="button">Update</button>
-                        <a th:href="@{/roles}" type="submit" class="button">Cancel</a>
+                        <a th:href="@{/roles}" class="button">Cancel</a>
                     </div>
                 </form>
-                <div class="actions add-new-role">
-                    <form th:action="@{|/roles/${role.id}/delete|}" method="post" th:object="${role}">
+                <div class = "actions-delete">
+                    <form id="delete-form" th:action="@{|/roles/${role.id}/delete|}" method="post" th:object="${role}">
                         <input type="hidden" th:field="*{id}"/>
                         <button type="submit" class="button">Delete</button>
                     </form>
