Fixed CSS for displaying error messages on the role detail page and the role index page for validation of new roles

--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -36,9 +36,10 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="actions add-new-role">
+                    <div class="actions add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
                         <input type="text" th:field="*{name}" placeholder="New Role..."/>
                         <button type="submit" class="button">Add</button>
+                        <div class = "error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                     </div>
                 </form>
             </div>
