--- a/src/main/resources/templates/role_detail.html
+++ b/src/main/resources/templates/role_detail.html
@@ -30,7 +30,7 @@
                 <form th:action="@{|/roles/${role.id}|}" method="post" th:object="${role}">
                     <input type="hidden" th:field="*{id}"/>
                     <h2>Edit Role</h2>
-                    <div class="actions-role-detail add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
+                    <div class="actions add-new-role" th:classappend="${#fields.hasErrors('name')}? 'error' : ''">
                         <input type="text" th:field="*{name}" placeholder="New Role..."/>
                         <div class = "error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                     </div>
