--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta charset="utf-8"/>
+        <meta http-equiv="x-ua-compatible" content="ie=edge"/>
         <title>InstaTeam</title>
-        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/site.css">
+        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+        <link rel="stylesheet" href="css/normalize.css"/>
+        <link rel="stylesheet" href="css/site.css"/>
     </head>
     <body>
         <header>
@@ -35,10 +35,10 @@
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
                                 <select>
-                                    <option value="#" selected>Designer</option>
-                                    <option value="#">Developer</option>
-                                    <option value="#">QA</option>
-                                    <option value="#">DevOps</option>
+                                    <option value="designer" selected="selected">Designer</option>
+                                    <option value="developer">Developer</option>
+                                    <option value="qa">QA</option>
+                                    <option value="devops">DevOps</option>
                                 </select>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                 <span class="dropdown-arrow"></span>
                                 <select>
                                     <option value="#">Designer</option>
-                                    <option value="#" selected>Developer</option>
+                                    <option value="#" selected="selected">Developer</option>
                                     <option value="#">QA</option>
                                     <option value="#">DevOps</option>
                                 </select>
@@ -61,18 +61,18 @@
                                 <select>
                                     <option value="#">Designer</option>
                                     <option value="#">Developer</option>
-                                    <option value="#" selected>QA</option>
+                                    <option value="#" selected="selected">QA</option>
                                     <option value="#">DevOps</option>
                                 </select>
                             </div>
                         </li>
                     </ul>
                     <div class="actions add-new-collaborator">
-                        <input type="text" placeholder="Name...">
+                        <input type="text" placeholder="Name..."/>
                         <div class="custom-select">
                             <span class="dropdown-arrow"></span>
                             <select>
-                                <option value="#" disabled selected>Role...</option>
+                                <option value="#" disabled="disabled" selected="selected">Role...</option>
                                 <option value="#">Developer</option>
                                 <option value="#">Designer</option>
                                 <option value="#">QA</option>
