--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -27,60 +27,30 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form>
+                <form th:action="@{/collaborators}" method="post" th:object="${collaborators}">
                     <h2>Manage Collaborators</h2>
                     <ul class="checkbox-list">
-                        <li>
-                            <span class="primary">Michael Pemulius</span>
+                        <li th:each="collaborator: ${collaborators}">
+                            <a th:text="${collaborator.name}"></a>
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="designer" selected="selected">Designer</option>
-                                    <option value="developer">Developer</option>
-                                    <option value="qa">QA</option>
-                                    <option value="devops">DevOps</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li>
-                            <span class="primary">Don Gately</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Designer</option>
-                                    <option value="#" selected="selected">Developer</option>
-                                    <option value="#">QA</option>
-                                    <option value="#">DevOps</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li>
-                            <span class="primary">Joelle Van Dyne</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Designer</option>
-                                    <option value="#">Developer</option>
-                                    <option value="#" selected="selected">QA</option>
-                                    <option value="#">DevOps</option>
+                                <select th:field="*{role}">
+                                    <option value="" disabled="disabled">Role...</option>
+                                    <option th:each="role : ${roles}" th:value="${role.name}" th:text="${role.name}">Developer</option>
                                 </select>
                             </div>
                         </li>
                     </ul>
                     <div class="actions add-new-collaborator">
-                        <input type="text" placeholder="Name..."/>
+                        <input type="text" th:field="*{name}" placeholder="Name..."/>
                         <div class="custom-select">
                             <span class="dropdown-arrow"></span>
-                            <select>
-                                <option value="#" disabled="disabled" selected="selected">Role...</option>
-                                <option value="#">Developer</option>
-                                <option value="#">Designer</option>
-                                <option value="#">QA</option>
-                                <option value="#">DevOps</option>
-                                <option value="#">Copywriter</option>
+                            <select th:field="*{role}">
+                                <option value="" disabled="disabled">Role...</option>
+                                <option th:each="role : ${roles}" th:value="${role.name}" th:text="${role.name}">Developer</option>
                             </select>
                         </div>
-                        <a class="button" href="#">Add</a>
+                        <a class="button" >Add</a>
                     </div>
                 </form>
             </div>
