--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -36,8 +36,7 @@
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
                                 <select>
-                                    <option value="" disabled="disabled">Role...</option>
-                                    <option th:each="role : ${roles}" th:text="${role.name}">Developer</option>
+                                    <option th:text="${collaborator.role.name}">Developer</option>
                                 </select>
                             </div>
                         </li>
