--- a/src/main/resources/templates/role_detail.html
+++ b/src/main/resources/templates/role_detail.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Projects</a></li>
-                <li><a href="collaborators.html">Collaborators</a></li>
+                <li><a th:href="@{/collaborators}">Collaborators</a></li>
                 <li class="selected"><a th:href="@{/roles}">Roles</a></li>
             </ul>
         </nav>
