Added feature to be able to delete roles and not break data integrity

--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -47,7 +47,7 @@
                             <span class="dropdown-arrow"></span>
                             <select th:field="*{role.id}">
                                 <option value="" disabled="disabled" >Role...</option>
-                                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
+                                <option th:each="role : ${roles}" th:value="${role.id}" th:if="${role.name} != 'Unallocated'? _" th:text="${role.name}"></option>
                             </select>
                         </div>
                         <button class="button" >Add</button>
