Added controller for project tab, changed the link in all the files to projects tab and allowed the template index page to show when clicked on projects tab

--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -20,7 +20,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Projects</a></li>
+                <li><a th:href="@{/projects}">Projects</a></li>
                 <li class="selected"><a href="collaborators.html">Collaborators</a></li>
                 <li><a href="roles.html">Roles</a></li>
             </ul>
