--- a/src/main/resources/templates/project_collaborators.html
+++ b/src/main/resources/templates/project_collaborators.html
@@ -20,7 +20,7 @@
         </header>
         <nav>
             <ul>
-                <li class="selected"><a href="index.html">Projects</a></li>
+                <li class="selected"><a th:href="@{/projects}">Projects</a></li>
                 <li><a href="collaborators.html">Collaborators</a></li>
                 <li><a href="roles.html">Roles</a></li>
             </ul>
