--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -20,7 +20,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Projects</a></li>
+                <li><a th:href="@{/projects}">Projects</a></li>
                 <li><a th:href="@{/collaborators}">Collaborators</a></li>
                 <li class="selected"><a th:href="@{/roles}">Roles</a></li>
             </ul>
