--- a/src/main/resources/templates/edit_project.html
+++ b/src/main/resources/templates/edit_project.html
@@ -27,38 +27,37 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form>
+                <form th:action="@{/projects}" method="post" th:object="${project}">
+                    <input type="hidden" th:field="*{id}"/>
                     <div>
-                        <label for="project_name"> Project Name:</label>
-                        <input type="text" name="project_name"/>
+                        <label> Project Name:</label>
+                        <input type="text" th:field="*{name}"/>
                     </div>
                     <div>
-                        <label for="project_description">Project Description:</label>
-                        <textarea rows="4" name="project_description"></textarea>
+                        <label>Project Description:</label>
+                        <textarea rows="4" th:field="*{description}"></textarea>
                     </div>
                     <div>
-                        <label for="project_status">Project Status:</label>
+                        <label>Project Status:</label>
                         <div class="custom-select">
                         <span class="dropdown-arrow"></span>
-                            <select name="project_status">
-                                <option value="active">Active</option>
-                                <option value="archived">Archived</option>
-                                <option value="not_started">Not Started</option>
+                            <select th:field="*{status}">
+                                <option th:each="status: ${statuses}" th:text="${status.name}" th:value="${status.name}"></option>
                             </select>
                         </div>
                     </div>
                     <div>
-                        <label for="project_roles">Project Roles:</label>
+                        <label>Project Roles:</label>
                         <ul class="checkbox-list">
                             <li th:each="role: ${roles}" th:if="${role.name != 'Unallocated'}">
-                                <input type="checkbox" name="project_roles" value="Developer"/>
+                                <input type="checkbox" name="project_roles" th:field="*{rolesNeeded}" th:value="${role.id}"/>
                                 <span class="primary" th:text="${role.name}"> Developer</span>
                             </li>
                         </ul>
                     </div>
                     <div class="actions">
                         <input type="submit" value="Save" class="button"/>
-                        <a href="#" class="button button-secondary">Cancel</a>
+                        <a th:href="@{/projects}" class="button button-secondary">Cancel</a>
                     </div>
                 </form>
             </div>
