Fixing project UI, adding feature for adding projects and being able to see the projects on the detail view

--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -21,8 +21,8 @@
         <nav>
             <ul>
                 <li><a th:href="@{/projects}">Projects</a></li>
-                <li class="selected"><a href="collaborators.html">Collaborators</a></li>
-                <li><a href="roles.html">Roles</a></li>
+                <li class="selected"><a th:href="@{/collaborators}">Collaborators</a></li>
+                <li><a th:href="@{/roles}">Roles</a></li>
             </ul>
         </nav>
         <section>
