--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,32 +21,17 @@
         <nav>
             <ul>
                 <li class="selected"><a th:href="@{/projects}">Projects</a></li>
-                <li><a href="collaborators.html">Collaborators</a></li>
-                <li><a href="roles.html">Roles</a></li>
+                <li><a th:href="@{/collaborators}">Collaborators</a></li>
+                <li><a th:href="@{/roles}">Roles</a></li>
             </ul>
         </nav>
         <section>
             <div class="container wrapper">
                 <div class="project-list">
-                    <div class="project">
-                        <h2><a href="project_detail.html">Website Project</a></h2>
-                        <p>Design and build a custom website</p>
-                        <span class="tag active">Active</span>
-                    </div>
-                    <div class="project">
-                        <h2><a href="#">App Project</a></h2>
-                        <p>Design and build a web app</p>
-                        <span class="tag active">Active</span>
-                    </div>
-                    <div class="project">
-                        <h2><a href="#">Poster Design</a></h2>
-                        <p>Create a poster design</p>
-                        <span class="tag archived">Archived</span>
-                    </div>
-                    <div class="project">
-                        <h2><a href="#">Mobile App</a></h2>
-                        <p>Design and build a mobile app</p>
-                        <span class="tag active">Active</span>
+                    <div class="project" th:each="project : ${projects}">
+                        <h2><a th:href="@{|/projects/${project.id}/edit|}" th:text="${project.name}">Website Project</a></h2>
+                        <p th:text="${project.description}">Design and build a custom website</p>
+                        <span class="tag active" th:text="${project.status}">Active</span>
                     </div>
                 </div>
             </div>
