--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
             <div class="container wrapper">
                 <div class="project-list">
                     <div class="project" th:each="project : ${projects}">
-                        <h2><a th:href="@{|/projects/${project.id}/edit|}" th:text="${project.name}">Website Project</a></h2>
+                        <h2><a th:href="@{|/projects/${project.id}/detail|}" th:text="${project.name}">Website Project</a></h2>
                         <p th:text="${project.description}">Design and build a custom website</p>
                         <span class="tag active" th:text="${project.status}">Active</span>
                     </div>
