--- a/src/main/resources/templates/edit_project.html
+++ b/src/main/resources/templates/edit_project.html
@@ -31,11 +31,13 @@
                     <input type="hidden" th:field="*{id}"/>
                     <div>
                         <label> Project Name:</label>
-                        <input type="text" th:field="*{name}"/>
+                        <input type="text" th:field="*{name}" th:classappend="${#fields.hasErrors('name')}? 'error' : ''"/>
+                        <div class = "error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                     </div>
                     <div>
                         <label>Project Description:</label>
-                        <textarea rows="4" th:field="*{description}"></textarea>
+                        <textarea rows="4" th:field="*{description}" th:classappend="${#fields.hasErrors('description')}? 'error' : ''"></textarea>
+                        <div class = "error-message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
                     </div>
                     <div>
                         <label>Project Status:</label>
