--- a/src/main/resources/templates/project_collaborators.html
+++ b/src/main/resources/templates/project_collaborators.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -27,49 +27,25 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form>
-                    <label>Edit Collaborators: Website Project</label>
+                <form th:action="@{/projects/update/collaborators}" method="post" th:object="${project}">
+                    <label th:text="|Edit: ${project.name}" >Edit Collaborators: Website Project</label>
                     <ul class="checkbox-list">
-                        <li><span class="primary">Developer</span>
+                        <li th:each="role : *{rolesNeeded}" th:if="${role.name != 'Unallocated'}">
+                            <span th:class="primary" th:text="${role.name}">Developer</span>
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Michael Pemulis</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li><span class="primary">Designer</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Don Gately</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li><span class="primary">QA</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Joelle Van Dyne</option>
-                                    <option value="#">Name</option>
-                                </select>
-                            </div>
-                        </li>
-                        <li><span class="primary">DevOps</span>
-                            <div class="custom-select">
-                                <span class="dropdown-arrow"></span>
-                                <select>
-                                    <option value="#">Choose...</option>
-                                    <option value="#">Name</option>
+                                <select th:field="*{collaborators}">
+                                    <option th:each="collaborator: ${role.collaborators}"
+                                            th:value="${collaborator.id}"
+                                            th:text="${collaborator.name}"> Collaborator Name
+                                    </option>
                                 </select>
                             </div>
                         </li>
                     </ul>
                     <div class="actions">
                         <input type="submit" value="Save" class="button"/>
-                        <a href="#" class="button button-secondary">Cancel</a>
+                        <a th:href="@{|/projects/${project.id}/detail|}" class="button button-secondary">Cancel</a>
                     </div>
                 </form>
             </div>
