--- a/src/main/resources/templates/project_collaborators.html
+++ b/src/main/resources/templates/project_collaborators.html
@@ -27,7 +27,7 @@
         </nav>
         <section>
             <div class="container wrapper">
-                <form th:action="@{/projects/update/collaborators}" method="post" th:object="${project}">
+                <form th:action="@{|/projects/${project.id}/update/collaborators|}" method="post" th:object="${project}">
                     <label th:text="|Edit: ${project.name}" >Edit Collaborators: Website Project</label>
                     <ul class="checkbox-list">
                         <li th:each="role : *{rolesNeeded}" th:if="${role.name != 'Unallocated'}">
